# Advanced_Langchain_ChatBot

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  logger.py  main.py  pyproject.toml  settings.py
backend/agents/coding_agent/: __main__.py  agent.py  middlewares.py  prompts.py  tools.py
backend/agents/core/: factory.py
backend/agents/mail_agent/: __main__.py  agent.py  prompts.py  tools.py
backend/agents/shared/: backend.py  llms.py  memory.py
backend/agents/shared/custom_middlewares/: mcp_prompt_middleware.py  streaming.py  user_scoped_filesystem.py  user_scoped_workspace.py
backend/agents/supervisor_agent/: __main__.py  agent.py  prompts.py
backend/api/: routers_auth.py  routers_history.py
backend/app/: models.yaml.example  models_config.py  server.py  settings.py
backend/app/agents/core/: factory.py  spec.py
backend/app/agents/mail_agent/: __main__.py  agent.py  middlewares.py  prompts.py  tools.py
backend/app/agents/main_agent/: __main__.py  agent.py  middlewares.py  prompts.py  subagents.py  tools.py
backend/app/agents/shared/: agent_contexts.py  backend.py  llms.py  memory.py  streaming.py  workspace_paths.py
backend/app/agents/weather_agent/: __main__.py  agent.py  middlewares.py  prompts.py  tools.py
backend/app/api/routers/: admin.py  auth.py  (+3 more)
backend/app/core/: auth.py
backend/app/db/: database.py  models.py
backend/core/: auth.py
backend/db/: database.py  models.py
backend/demo_fastmcp_server/: .env.example  README.md  auth.py  config.py  generate_token.py  middleware.py  requirements.txt  server.py
(+21 files in other folders)
